--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "senei",
-  "version": "0.0.0",
+  "name": "zero-app",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "start": "zero"
   },
   "dependencies": {
-    "vue": "^3.0.0-beta.12",
-    "vue-router": "^4.0.0-alpha.11"
-  },
-  "devDependencies": {
-    "@vue/compiler-sfc": "3.0.0-beta.13",
-    "sass": "^1.26.5",
-    "vite": "^0.5.1"
+    "@babel/core": "^7.2.2",
+    "@babel/runtime": "^7.3.1",
+    "regenerator-runtime": "^0.12.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "babel-plugin-transform-zero-dirname-filename": "^1.1.1-alpha.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "cssnano": "^4.1.10",
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.3",
+    "vue-meta": "^1.6.0",
+    "vue-template-compiler": "^2.6.10",
+    "@vue/component-compiler-utils": "^3.0.2"
   }
 }
